--- a/frontend/styles/general/general.css
+++ b/frontend/styles/general/general.css
@@ -6,3 +6,23 @@ body {
   background-color: white;
   margin-left: 64px;
 }
+
+/* Стили для scrollbar */
+::-webkit-scrollbar {
+  width: 8px; /* Ширина скроллбара */
+  height: 8px; /* Высота скроллбара для горизонтальных полос */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Цвет ползунка */
+  border-radius: 4px; /* Скругление углов */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Цвет ползунка при наведении */
+}
+
+::-webkit-scrollbar-track {
+  background: #f0f0f0; /* Цвет трека */
+  border-radius: 4px; /* Скругление углов трека */
+}
