--- a/frontend/styles/pages/warehouse.css
+++ b/frontend/styles/pages/warehouse.css
@@ -1,4 +1,4 @@
-.storage-container {
+.header {
   position: fixed;
   display: flex;
 
@@ -28,14 +28,15 @@
 }
 
 .active-storage {
+  color: #6cbbfa;
+  border-color: #6cbbfa;
   background-color: white;
-  color: #001F3F;
 }
 
 .search-container {
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 10px;
+  right: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
