New backgroud color

--- a/frontend/styles/general/general.css
+++ b/frontend/styles/general/general.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
 
   font-family: Montserrat, sans-serif;
-  background-color: white;
+  background-color: #eceff3;
   margin-left: 64px;
 }
 
