--- a/frontend/styles/pages/warehouse.css
+++ b/frontend/styles/pages/warehouse.css
@@ -30,7 +30,7 @@
 .active-storage {
   color: #6cbbfa;
   border-color: #6cbbfa;
-  background-color: white;
+  background-color: #eceff3;
 }
 
 .search-container {
