--- a/frontend/styles/general/sidebar.css
+++ b/frontend/styles/general/sidebar.css
@@ -46,7 +46,8 @@
   align-items: center;
   justify-content: center;
   border-radius: 10px 0px 0px 10px;
-  transition: background-color 0.2s;
+  margin-bottom: 5px;
+  transition: all 0.2s;
   cursor: pointer;
 }
 
@@ -58,7 +59,8 @@
 .warehouse-button-container:hover,
 .orders-button-container:hover,
 .logout-button-container:hover {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: white;
+  cursor: default;
 }
 
 .warehouse-button-image,
@@ -66,15 +68,17 @@
 .logout-button-image,
 .active-button-image {
   width: 70%;
-}
-
-.warehouse-button-image,
-.orders-button-image,
-.logout-button-image {
   filter: invert(100%) sepia(95%) saturate(12%) hue-rotate(211deg) brightness(104%) contrast(100%);
+  transition: all 0.2s;
 }
 
 .active-button-image {
+  filter: brightness(0) saturate(100%) invert(74%) sepia(18%) saturate(6910%) hue-rotate(182deg) brightness(105%) contrast(96%);
+}
+
+.warehouse-button-container:hover > img,
+.orders-button-container:hover > img,
+.logout-button-container:hover > img {
   filter: brightness(0) saturate(100%) invert(74%) sepia(18%) saturate(6910%) hue-rotate(182deg) brightness(105%) contrast(96%);
 }
 
@@ -84,14 +88,16 @@
 .active-button-text {
   font-size: 10px;
   font-weight: bold;
-}
-
-.warehouse-button-text,
-.orders-button-text,
-.logout-button-text {
   color: white;
+  transition: all 0.2s;
 }
 
 .active-button-text {
+  color: #6cbbfa;
+}
+
+.warehouse-button-container:hover > span,
+.orders-button-container:hover > span,
+.logout-button-container:hover > span {
   color: #6cbbfa;
 }
