--- a/frontend/styles/pages/warehouse.css
+++ b/frontend/styles/pages/warehouse.css
@@ -25,7 +25,7 @@
   border-style: solid;
   color:white;
   border-color: #001F3F;
-  transition: background-color 0.2s;
+  transition: all 0.2s;
   cursor: pointer;
 }
 
