--- a/frontend/styles/pages/warehouse.css
+++ b/frontend/styles/pages/warehouse.css
@@ -19,7 +19,7 @@
   flex-shrink: 0;
   padding: 7px;
   margin-right: 10px;
-  border-radius: 10%;
+  border-radius: 10px;
   background-color: #001F3F;
   border-width: 2px;
   border-style: solid;
