--- a/frontend/styles/pages/warehouse.css
+++ b/frontend/styles/pages/warehouse.css
@@ -67,9 +67,9 @@
 }
 
 .column-container {
+  align-self: start;
   width: 150px;
   margin-right: 10px;
-  padding-bottom: 10px;
 
   background-color: white;
   border-radius: 10px;
@@ -81,6 +81,7 @@
   padding: 10px;
   align-items: center;
   border-bottom: 1px solid gray;
+  margin-bottom: 10px;
 }
 
 .column-title {
@@ -95,3 +96,57 @@
   border-radius: 3.5px;
 }
 
+.column-units {
+  display: flex;
+  flex-direction: column;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.column-blank-unit {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80px;
+  margin-bottom: 10px;
+  border: 3px dashed lightgray;
+  border-radius: 10px;
+
+  background: repeating-linear-gradient(45deg, lightgray 0, lightgray 5px, transparent 5px, transparent 10px);
+}
+
+.column-blank-unit-image {
+  width: 40px;
+  background-color: white;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.column-unit {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 80px;
+  color: white;
+  margin-bottom: 10px;
+  border: 3px solid gray;
+  border-radius: 10px;
+}
+
+.column-unit-title {
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+}
+
+.column-unit-border {
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+}
+
+.column-unit-shipment {
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+}
