--- a/frontend/styles/pages/warehouse.css
+++ b/frontend/styles/pages/warehouse.css
@@ -58,3 +58,74 @@
 .search-image {
   height: 70%;
 }
+
+/* Storage */
+.storage-container {
+  display: flex;
+  flex-wrap: nowrap;
+  padding: 10px;
+}
+
+.column-container {
+  align-self: start;
+  width: 150px;
+}
+
+.column-info {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  align-items: center;
+  border-bottom: 2px solid lightgray;
+  margin-bottom: 10px;
+}
+
+.column-title {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.column-capacity {
+  color: rgb(129, 129, 129);
+}
+
+.column-units {
+  display: flex;
+  flex-direction: column;
+  padding-left: 10px;
+  padding-right: 10px;
+  /* border-left: 1px solid lightgray; */
+  border-right: 2px solid lightgray;
+}
+
+.column-blank-unit,
+.column-unit {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  border-radius: 10px;
+  color: gray;
+  background-color: lightgray;
+  box-shadow: 10px 0px 20px #f6f6f6;
+  margin-bottom: 10px;
+}
+
+.column-blank-unit-image {
+  height: 40px;
+}
+
+.column-unit {
+  color: white;
+}
+
+.column-unit-title,
+.column-unit-bordero,
+.column-unit-shipment {
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+}
+
+
