--- a/frontend/static/styles/pages/warehouse.css
+++ b/frontend/static/styles/pages/warehouse.css
@@ -71,7 +71,7 @@
 
 .column-container {
   align-self: start;
-  width: 150px;
+  width: 160px;
 }
 
 .column-info {
@@ -95,9 +95,8 @@
 .column-units {
   display: flex;
   flex-direction: column;
-  padding-left: 10px;
-  padding-right: 10px;
-  /* border-left: 1px solid lightgray; */
+  padding-left: 15px;
+  padding-right: 15px;
   border-right: 2px solid lightgray;
 }
 
@@ -111,7 +110,7 @@
   border-radius: 10px;
   color: gray;
   background-color: lightgray;
-  box-shadow: 10px 0px 20px #f6f6f6;
+  box-shadow: 0px 10px 20px #e9e9e9;
   margin-bottom: 10px;
 }
 
