--- a/frontend/static/styles/general/sidebar.css
+++ b/frontend/static/styles/general/sidebar.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
 
-  background-color: #001F3F;
+  background: linear-gradient(135deg, #001F3F 0%, #004F7F 100%);
   z-index: 1;
 }
 
