--- a/frontend/static/styles/pages/warehouse.css
+++ b/frontend/static/styles/pages/warehouse.css
@@ -108,18 +108,20 @@
   align-items: center;
   height: 80px;
   border-radius: 10px;
-  color: gray;
+  color: white;
   background-color: lightgray;
-  box-shadow: 0px 10px 20px #e9e9e9;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   margin-bottom: 10px;
+  transition: transform 0.2s ease;
+}
+
+.column-unit:hover {
+  transform: scale(1.05); /* Эффект увеличения при наведении */
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
 }
 
 .column-blank-unit-image {
   height: 40px;
-}
-
-.column-unit {
-  color: white;
 }
 
 .column-unit-title,
