--- a/frontend/static/styles/general/general.css
+++ b/frontend/static/styles/general/general.css
@@ -1,10 +1,6 @@
-body {
+* {
   padding: 0;
   margin: 0;
-
-  font-family: Montserrat, sans-serif;
-  /* background-color: white; */
-  margin-left: 64px;
 }
 
 /* Стили для scrollbar */
