--- a/frontend/static/styles/general/sidebar.css
+++ b/frontend/static/styles/general/sidebar.css
@@ -1,9 +1,5 @@
 .sidebar{
-  position: fixed;
-  top: 0px;
-  bottom: 0;
-  left: 0;
-  width: 64px;
+  flex: 0 0 64px;
 
   display: flex;
   flex-direction: column;
