--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -2,5 +2,24 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+}
+
+/* Стили для scrollbar */
+::-webkit-scrollbar {
+  width: 8px; /* Ширина скроллбара */
+  height: 8px; /* Высота скроллбара для горизонтальных полос */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Цвет ползунка */
+  border-radius: 4px; /* Скругление углов */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Цвет ползунка при наведении */
+}
+
+::-webkit-scrollbar-track {
+  background: #f0f0f0; /* Цвет трека */
+  border-radius: 4px; /* Скругление углов трека */
 }
