--- a/frontend_react/src/components/Board/Storage/Column/Unit/unit.css
+++ b/frontend_react/src/components/Board/Storage/Column/Unit/unit.css
@@ -37,4 +37,7 @@
   width: 100%;
   text-align: center;
   font-weight: bold;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
