--- a/frontend_react/src/components/OrdersWindow/AddOrderButton/addorderbutton.css
+++ b/frontend_react/src/components/OrdersWindow/AddOrderButton/addorderbutton.css
@@ -1,4 +1,4 @@
-.search-button {
+.add-button {
   position: absolute;
   bottom: 10px;
   right: 10px;
@@ -6,26 +6,23 @@
   justify-content: center;
   align-items: center;
   border-radius: 100%;
-  background-color: gold;
+  background-color: #008000;
   height: 60px;
   width: 60px;
   z-index: 1;
   transition: all 0.3s ease;
 }
 
-.search-button.active-order {
-  background-color: red;
-}
-
-.search-button:hover {
+.add-button:hover {
   transform: translateY(-2px);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
 }
 
-.search-button:active {
+.add-button:active {
   transform: translateY(0);
 }
 
-.search-image {
-  height: 60%;
+.add-image {
+  filter: invert(100%) sepia(95%) saturate(12%) hue-rotate(211deg) brightness(104%) contrast(100%);
+  height: 90%;
 }
