--- a/frontend_react/src/components/OrdersWindow/OrdersWindow.css
+++ b/frontend_react/src/components/OrdersWindow/OrdersWindow.css
@@ -1,14 +1,10 @@
-.search-window {
-  position: fixed;
+.orders-window{
   display: flex;
-  align-items: center;
   justify-content: center;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.715);
-  z-index: 10;
+  align-items: start;
+  flex: 1;
+  height: 100vh;
+  position: relative;
 }
 
 .search-column {
@@ -16,37 +12,9 @@
   margin: 20px;
   flex: 0 1 600px;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: start;
+  justify-content: start;
   display: flex;
-}
-
-.close-popup-button {
-  position: absolute;
-  top: -30px;
-  right: -30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 100%;
-  background-color: red;
-  height: 30px;
-  width: 30px;
-  z-index: 1;
-  transition: all 0.3s ease;
-}
-
-.close-popup-button:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-}
-
-.close-popup-button:active {
-  transform: translateY(0);
-}
-
-.close-pupup-image {
-  height: 60%;
 }
 
 .search-input-group {
@@ -56,6 +24,7 @@
   align-items: center;
   position: relative;
 }
+
 
 .search-input {
   width: 100%;
