--- a/frontend_react/src/components/OrdersWindow/PopupButton/PopupButton.css
+++ b/frontend_react/src/components/OrdersWindow/PopupButton/PopupButton.css
@@ -1,4 +1,4 @@
-.add-button {
+.popup-button {
   position: absolute;
   bottom: 10px;
   right: 10px;
@@ -13,16 +13,20 @@
   transition: all 0.3s ease;
 }
 
-.add-button:hover {
+.popup-button.active {
+  background-color: red;
+}
+
+.popup-button:hover {
   transform: translateY(-2px);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
 }
 
-.add-button:active {
+.popup-button:active {
   transform: translateY(0);
 }
 
-.add-image {
+.popup-button-image {
   filter: invert(100%) sepia(95%) saturate(12%) hue-rotate(211deg) brightness(104%) contrast(100%);
-  height: 90%;
+  height: 65%;
 }
